--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @layer base {
 
     body {
-        @apply bg-default
+        @apply bg-beige
     }
 
     .max-w-container {
@@ -23,7 +23,7 @@
     }
 
     h1 {
-        @apply text-3xl text-primary-darker
+        @apply text-2xl md:text-3xl
     }
 
     h2 {
@@ -35,6 +35,10 @@
     }
 
     p {
-        @apply text-dark-blue
+        @apply text-dark
+    }
+
+    li {
+        @apply list-disc
     }
 }
