updated nav and content

--- a/src/index.css
+++ b/src/index.css
@@ -2,28 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
+
 @layer base {
 
     body {
-        @apply bg-beige
+        @apply bg-neutral overflow-x-hidden font-lato
     }
 
     .max-w-container {
         max-width: 85rem;
         margin: 0 auto;
         padding: 0 2rem;
+        overflow-x: hidden;
+    }
+
+    @media (min-width: 1024px) {
+        .max-w-container {
+            margin-left: 210px;
+        }
     }
 
     input[placeholder] {
         text-overflow: ellipsis;
         white-space: nowrap;
-        /* Ensures text stays on a single line */
         overflow: hidden;
-        /* Hides the overflow content */
     }
 
     h1 {
-        @apply text-2xl md:text-3xl
+        @apply text-2xl md:text-3xl font-montserrat font-medium
     }
 
     h2 {
@@ -31,14 +37,14 @@
     }
 
     h3 {
-        @apply text-xl
+        @apply text-xl font-montserrat uppercase text-white tracking-wider
     }
 
     p {
-        @apply text-dark
+        @apply text-dark leading-normal
     }
 
     li {
-        @apply list-disc
+        @apply list-disc font-montserrat
     }
 }
