--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
     /* Light Mode */
     body {
-        @apply bg-light-bg text-black dark:bg-dark-bg dark:text-primary-light transition-colors duration-300;
+        @apply bg-light-bg text-black font-lato dark:bg-dark-bg dark:text-primary-light transition-colors duration-300;
     }
 
     header {
@@ -50,7 +50,7 @@
     }
 
     p {
-        @apply leading-normal
+        @apply leading-[28px]
     }
 
     li {
@@ -59,7 +59,7 @@
 
 
 
-    input[type="checkbox"] {
+    .detail-input input[type="checkbox"] {
         appearance: none;
         -webkit-appearance: none;
         display: flex;
@@ -71,10 +71,10 @@
         border-radius: 50%;
         position: relative;
 
-        @apply border-primary-light
+        @apply dark:border-primary-light
     }
 
-    input[type="checkbox"]::before {
+    .detail-input input[type="checkbox"]::before {
         content: "";
         width: 10px;
         height: 10px;
@@ -104,31 +104,36 @@
     .custom-list li {
         position: relative;
         list-style-type: none;
-        padding-left: 2.8rem;
     }
 
-    .custom-list li::marker {
-        font-size: 1rem;
-        font-weight: bold;
+    .custom-checkbox {
+        appearance: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        width: 20px;
+        height: 20px;
+        margin-right: 5px;
+        border: 1px solid black;
+        /* Primary color */
+        border-radius: 4px;
+        cursor: pointer;
+        position: relative;
+        outline: none;
+        transition: background-color 0.3s ease;
+        background-color: white;
+
+        @apply dark:border-white
     }
 
-    .custom-list li::before {
-        content: counter(list-item);
+    .custom-checkbox:checked::before {
+        content: '✔';
         position: absolute;
-        left: 0;
+        left: 50%;
         top: 50%;
-        transform: translateY(-50%);
-        font-size: 18px;
-        width: 2rem;
-        height: 2rem;
-        border-radius: 50%;
-        border-width: 1px;
-        background-color: #bfb7b6;
-        border-color: white;
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        transform: translate(-50%, -50%);
+        font-size: 16px;
+        font-weight: bold;
+
 
     }
 
